Chore: 코드 리팩토링 #76
- 응답 객체를 생성하는 과정을 CourseSummaryResponse에 위임
- Schedule 리스트를 가져오는 코드를 하나의 메서드로 구현